<?xml version="1.0"?>
<package format="3">
  <name>ros2_introspection</name>
  <version>0.0.1</version>
  <description>Extract information from a ROS2 message at run-time</description>
  <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rmw_fastrtps_cpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>boost</depend>
  <depend>nlohmann_json</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
